The fit expression is now created from scratch.
Differences from previous versions

 - previously the constructors contained a template expression that arguments were substituted into. Now the arguments are stored in functions that are used to assemble the call.

 - `varying()` not evaluates to a `quote(varying())` so that it can be evaluated.

 - Secondary arguments are now called `others` instead of `engine_args`.

 - Secondary arguments are now evaluated immediately. They can be wrapped in `expr` to avoid this.

 - Code specification objects no longer have mode-specific classes (e.g. `rand_forest_classification`)

--- a/vignettes/parsnip_Intro.Rmd
+++ b/vignettes/parsnip_Intro.Rmd
@@ -82,7 +82,7 @@ However, there might be other arguments that you would like to change or allow t
 ```{r rf-seed}
 rf_with_seed <- rand_forest(
   trees = 2000, mtry = varying(), 
-  engine_args = list(seed = 63233), 
+  others = list(seed = 63233), 
   mode = "regression"
 )
 rf_with_seed
