--- a/vignettes/articles/Classification.Rmd
+++ b/vignettes/articles/Classification.Rmd
@@ -64,7 +64,7 @@ library(keras)
 set.seed(57974)
 nnet_fit <- mlp(
   mode = "classification", 
-  epochs = 100, units = 5, dropout = 0.1, 
+  epochs = 100, hidden_units = 5, dropout = 0.1, 
   others = list(verbose = 0, validation_split = .20)
 ) %>%
   parsnip::fit.model_spec(Status ~ ., data = juice(credit_rec), engine = "keras")
