--- a/vignettes/articles/Scratch.Rmd
+++ b/vignettes/articles/Scratch.Rmd
@@ -64,14 +64,14 @@ A row for "unknown" modes is not needed in this object.
 
 Now, we enumerate the _main arguments_ for each engine. `parsnip` standardizes the names of arguments across different models and engines. For example, random forest and boosting use multiple trees to create the ensemble. Instead of using different argument names, `parsnip` standardizes on `trees` and the underlying code translates to the actual arguments used by the different functions. 
 
-In our case, the MDA argument name will be "subclasses". 
+In our case, the MDA argument name will be "sub_classes". 
 
 Here, the object name will have the suffix `_arg_key` and will have columns for the engines and rows for the arguments. The entries for the data frame are the actual arguments for each engine (and is `NA` when an engine doesn't have that argument). Ours:
 
 ```{r arg-key}
 mixture_da_arg_key <- data.frame(
-  mda      =   "subclasses",
-  row.names =  "subclasses",
+  mda      =   "sub_classes",
+  row.names =  "sub_classes",
   stringsAsFactors = FALSE
 )
 ```
@@ -89,27 +89,25 @@ The internals of `parsnip` will use these objects during the creation of the mod
 This is a fairly simple function that can follow a basic template. The main arguments to our function will be:
 
  * The mode. If the model can do more than one mode, you might default this to "unknown". In our case, since it is only a classification model, it makes sense to default it to that mode. 
- * The argument names (`subclasses` here). These should be defaulted to `NULL`.
- * An argument, `others`, that can be used to pass in other arguments to the underlying model fit functions. 
- * `...`, although they are not currently used. We encourage developers to move the `...` after mode so that users are encouraged to use named arguments to the model specification. 
+ * The argument names (`sub_classes` here). These should be defaulted to `NULL`.
+ * `...` is used to pass in other arguments to the underlying model fit functions. 
 
 A basic version of the function is:
 
 ```{r model-fun}
 mixture_da <-
-  function(mode = "classification", ...,  subclasses = NULL, others = list()) {
-    
-    # start with some basic error traps
-    check_empty_ellipse(...)
-    
+  function(mode = "classification",  sub_classes = NULL, ...) {
+    # Check for correct mode
     if (!(mode %in% mixture_da_modes))
       stop("`mode` should be one of: ",
            paste0("'", mixture_da_modes, "'", collapse = ", "),
            call. = FALSE)
     
-    args <- list(subclasses = subclasses)
-    
-    # save the other arguments but remove them if they are null. 
+    # Capture the arguments in quosures
+    others <- enquos(...)
+    args <- list(sub_classes = enquo(sub_classes))
+
+    # Save the other arguments but remove them if they are null. 
     no_value <- !vapply(others, is.null, logical(1))
     others <- others[no_value]
     
@@ -233,7 +231,7 @@ For example:
 library(parsnip)
 library(tidyverse)
 
-mixture_da(subclasses = 2) %>%
+mixture_da(sub_classes = 2) %>%
   translate(engine = "mda")
 ```
 
@@ -248,7 +246,7 @@ iris_split <- initial_split(iris, prop = 0.90)
 iris_train <- training(iris_split)
 iris_test  <-  testing(iris_split)
 
-mda_spec <- mixture_da(subclasses = 2)
+mda_spec <- mixture_da(sub_classes = 2)
 
 mda_fit <- mda_spec %>%
   fit(Species ~ ., data = iris_train, engine = "mda")
@@ -278,7 +276,7 @@ There are some models (e.g. `glmnet`, `plsr`, `Cubist`, etc.) that can make pred
 For example, if I fit a linear regression model via `glmnet` and get four values of the regularization parameter (`lambda`):
 
 ```{r glmnet}
-linear_reg(others = list(nlambda = 4)) %>%
+linear_reg(nlambda = 4) %>%
   fit(mpg ~ ., data = mtcars, engine = "glmnet") %>%
   predict(new_data = mtcars[1:3, -1])
 ```
@@ -302,7 +300,7 @@ logistic_reg() %>% translate(engine = "glm")
 
 # but you can change it:
 
-logistic_reg(others = list(family = expr(binomial(link = "probit")))) %>% 
+logistic_reg(family = binomial(link = "probit")) %>% 
   translate(engine = "glm")
 ```
 
@@ -322,13 +320,23 @@ translate.rand_forest <- function (x, engine, ...){
   # Run the general method to get the real arguments in place
   x <- translate.default(x, engine, ...)
   
+  # Make code easier to read
+  arg_vals <- x$method$fit$args
+  
   # Check and see if they make sense for the engine and/or mode:
   if (x$engine == "ranger") {
-    if (any(names(x$method$fit$args) == "importance")) 
-      if (is.logical(x$method$fit$args$importance)) 
+    if (any(names(arg_vals) == "importance")) 
+      # We want to check the type of `importance` but it is a quosure. We first
+      # get the expression. It is is logical, the value of `quo_get_expr` will
+      # not be an expression but the actual logical. The wrapping of `isTRUE`
+      # is there in case it is not an atomic value. 
+      if (isTRUE(is.logical(quo_get_expr(arg_vals$importance)))) 
         stop("`importance` should be a character value. See ?ranger::ranger.", 
              call. = FALSE)
+    if (x$mode == "classification" && !any(names(arg_vals) ==  "probability")) 
+      arg_vals$probability <- TRUE
   }
+  x$method$fit$args <- arg_vals
   x
 }
 ```
