--- a/vignettes/parsnip_Intro.Rmd
+++ b/vignettes/parsnip_Intro.Rmd
@@ -97,33 +97,12 @@ To fit the model, you must:
 * have no `varying()` parameters, and
 * specify a computational engine. 
 
-The first step before fitting the model is to resolve the underlying model's syntax. A helper function called `translate` does this:
-
-```{r rf-translate}
-library(parsnip)
-rf_mod <- rand_forest(trees = 2000, mode = "regression")
-rf_mod
-
-translate(rf_mod, engine = "ranger")
-translate(rf_mod, engine = "randomForest")
-```
-
-Note that any extra engine-specific arguments have to be valid for the model:
-
-```{r rf-error, error = TRUE}
-translate(rf_with_seed, engine = "ranger")
-translate(rf_with_seed, engine = "randomForest")
-```
-
-`translate` shouldn't need to be used unless you are really curious about the model fit function or what R packages are needed to fit the model. The function in the next section will always translate the model. 
-
-
-## Fitting the Model
-
-These models can be fit using the `fit` function. Only the model object is returned. 
+For example, `rf_with_seed` above is not ready for fitting due the `varying()` parameter. We can set that parameter's value and then create the model fit: 
 
 ```{r, eval = FALSE}
-fit(rf_mod, mpg ~ ., data = mtcars, engine = "ranger")
+rf_with_seed %>% 
+  set_args(mtry = 4) %>% 
+  fit(mpg ~ ., data = mtcars, engine = "ranger")
 ```
 
 ```
@@ -132,23 +111,27 @@ fit(rf_mod, mpg ~ ., data = mtcars, engine = "ranger")
 #> Ranger result
 #> 
 #> Call:
-#>  ranger::ranger(formula = formula, data = data, num.trees = ~2000,      num.threads = 1, verbose = FALSE, seed = sample.int(10^5,          1)) 
+#>  ranger::ranger(formula = formula, data = data, mtry = ~4, num.trees = ~2000,      seed = ~63233, num.threads = 1, verbose = FALSE) 
 #> 
 #> Type:                             Regression 
 #> Number of trees:                  2000 
 #> Sample size:                      32 
 #> Number of independent variables:  10 
-#> Mtry:                             3 
+#> Mtry:                             4 
 #> Target node size:                 5 
 #> Variable importance mode:         none 
 #> Splitrule:                        variance 
-#> OOB prediction error (MSE):       5.71 
-#> R squared (OOB):                  0.843
+#> OOB prediction error (MSE):       5.57 
+#> R squared (OOB):                  0.847
 ```
 
+Or, using the `randomForest` package: 
 
 ```{r, eval = FALSE}
-fit(rf_mod, mpg ~ ., data = mtcars, engine = "randomForest")
+set.seed(56982)
+rf_with_seed %>% 
+  set_args(mtry = 4) %>% 
+  fit(mpg ~ ., data = mtcars, engine = "randomForest")
 ```
 
 ```
@@ -156,16 +139,16 @@ fit(rf_mod, mpg ~ ., data = mtcars, engine = "randomForest")
 #> 
 #> 
 #> Call:
-#>  randomForest(x = as.data.frame(x), y = y, ntree = ~2000) 
+#>  randomForest(x = as.data.frame(x), y = y, ntree = ~2000, mtry = ~4,      seed = ~63233) 
 #>                Type of random forest: regression
 #>                      Number of trees: 2000
-#> No. of variables tried at each split: 3
+#> No. of variables tried at each split: 4
 #> 
-#>           Mean of squared residuals: 5.6
-#>                     % Var explained: 84.1
+#>           Mean of squared residuals: 5.52
+#>                     % Var explained: 84.3
 ```
 
-Note that, in the case of the `ranger` fit, the call object shows `num.trees = ~2000`. The tilde is the consequence of `parsnip` using quosures to process the model specification's arguments. 
+Note that the call objects show `num.trees = ~2000`. The tilde is the consequence of `parsnip` using quosures to process the model specification's arguments. 
 
 Normally, when a function is executed, the function's arguments are immediately evaluated. In the case of `parsnip`, the model specification's arguments are _not_; the expression is captured along with the environment where it should be evaluated. That is what a quosure does. 
 
